--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
-    <camel.version>2.15.3</camel.version>
+    <camel.version>2.17.0</camel.version>
     <activemq.version>5.11.1</activemq.version>
 	</properties>
 
@@ -98,5 +98,13 @@
     </plugins>
 	</build>
 	
+<repositories>
+<repository> 
+<id>asf-camel-217</id>
+<name>Apache Camel Snapshot 2.17
+</name>
+<url>https://repository.apache.org/content/repositories/orgapachecamel-1047/</url>
+</repository>
+</repositories>
 
 </project>
